--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: baseline;
-    width: 1184px;
-    height: 52px;
+    align-items: center;
+    max-width: calc(100% - 96px);
+    
     margin: auto;
     padding-top: 28px;
 }
@@ -50,15 +50,18 @@
 
 .header__lang-link {
     color: white;
+    text-decoration: none;
 }
 
-.header__lang-link:nth-of-type(1) {
+.header__lang-link:first-of-type {
+    text-decoration: underline;
     padding-right: 18px;
 }
 
+
 .lead {
     
-    max-width: 984px;
+    max-width: calc(100% - 296px);
     
     padding-top: 56px;
     margin: auto;
@@ -72,6 +75,7 @@
     font-size: 96px;
     text-align: center;
     line-height: 100px;
+    max-width: 720px;
 }
 
 .lead__subtitle {
@@ -81,13 +85,13 @@
     font-style: normal;
     font-size: 30px;
     line-height: 36px;
-    width: 640px;
+    max-width: 640px;
     text-align: center;
 }
 
 .lead__image {
-    width: 984px;
-    height: 615px;
+    max-width: 100%;
+    
     padding-top: 64px;
 }
 
@@ -103,8 +107,8 @@
 
 .intro {
     max-width: 984px;
-    
-    margin: 0 auto 92px;    
+    padding-top: 92px;
+    margin: 0 auto;    
 }
 
 .intro__title {
@@ -112,6 +116,7 @@
     font-style: normal;
     font-size: 54px;
     line-height: 58px;
+    margin: 0;
 }
 
 .intro__text {
@@ -120,6 +125,9 @@
     font-size: 16px;
     line-height: 26.08px;
     max-width: 690px;
+    
+    margin: 0;
+    padding-top: 40px;
 }
 
 .intro__list {
@@ -129,6 +137,8 @@
     font-size: 12px;
     line-height: 18px;
     padding-left: 0;
+    margin: 0;
+    padding-top: 33px;
 }
 
 .list__number {
@@ -137,17 +147,17 @@
 
 .photo-grid {
     display: grid;
-    grid-template-columns: repeat(4, 284px);
-    grid-template-rows: repeat(3, 213px);
-    width: 1184px;
-    height: 671px;
+    grid-template-columns: repeat(4, 1fr);
+    max-width: calc(100% - 96px);
+    align-content: center;
+    margin: 0 auto;
     gap: 16px;
-    margin: auto;
+    
+    padding-top: 92px;
 }
 
 .photo-grid__item {
-    width: 284px;
-    height: 213px;
+    width: 100%;
 }
 
 .places {
@@ -175,6 +185,27 @@
     align-self: end;
 }
 
+.place__website:hover {
+    opacity: 0.8;
+}
+
+.website__url-heading {
+    color: #AAAAAA;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 2px;
+}
+
+.website__link {
+    color: white;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 22px;
+}
+
 .place__text {
     font-weight: 400;
     font-style: normal;
@@ -191,11 +222,11 @@
 }
 
 .place__image {
-    max-width: 460px;
+    max-width: 100%;
 }
 
 .cover {
-    max-width: 1184px;
+    max-width: 100%;
     margin: 0 auto;
     max-height: 740px;
     padding-top: 92px;
@@ -222,8 +253,8 @@
 }
 
 .cover__overlay {
-    max-width: 1184px;
-    min-height: 740px;
+    max-width: calc(100% - 96px);
+    height: 740px;
     background-image: linear-gradient(rgba(42, 44, 47, 0.3), rgba(42, 44, 47, 0.3)), url(./sprint-3-images/cover-trains.jpg);
     display: flex;
     flex-direction: column;
@@ -232,7 +263,7 @@
     align-items: center;
     justify-content: center;
     text-decoration: none;
-    
+    margin: 0 auto;
     transition: background-image;
 
 }
@@ -244,7 +275,7 @@
 .footer {
     display: flex;
     flex-direction: row;
-    max-width: 1184px;
+    max-width: calc(100% - 96px);
     justify-content: space-between;
     margin: auto;
     padding-top: 92px;
@@ -253,8 +284,355 @@
 
 .footer__link {
     padding-left: 18px;
+    text-decoration: none;
+    color: white;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 18px;
+
 }
 
 .footer__link:nth-of-type(1) {
     padding-left: 0;
+}
+
+.footer__copyright {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 16px;
+}
+
+@media screen and (min-width: 1280px) {
+    .header {
+        max-width: calc(100% - 96px);
+    }
+
+    .lead {
+        max-width: calc(100% - 296px);
+    }
+
+    .lead__image {
+        width: 100%;
+        height: 100%;
+        margin: auto;
+    }
+
+    .intro {
+        max-width: calc(100% - 148px);
+        margin-right: 0;
+        max-height: 720px;
+    }
+
+    .cover {
+        max-width: calc(100% - 96px);
+        
+    }
+
+    .cover__overlay {
+        max-width: 100%;
+        
+    }
+
+    .footer {
+        max-width: calc(100% - 96px);
+    }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    
+    .header {
+        max-width: calc(100% - 96px);
+        padding-top: 28px;
+    }
+
+    .lead {
+        max-width: calc(100% - 96px);
+        margin: auto;
+        }
+
+    .lead__image {
+        max-width: 100%;
+        max-height: 100%;
+    }
+
+    .intro {
+        max-width: calc(100% - 48px);
+        margin-right: 0;
+    }
+
+    .photo-grid {
+        grid-template-columns: repeat(3, 1fr);
+        max-width: calc(100% - 96px);
+        margin: 0 auto;
+    }
+
+    .places {
+        max-width: calc(100% - 96px);
+        margin: 0 auto;
+    }
+
+    .place {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 32px;
+    }
+
+    .cover {
+        width: 100%;
+    }
+
+    .cover__overlay {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .footer {
+        max-width: calc(100% - 96px);
+    }
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+    .header {
+        max-width: calc(100% - 48px);
+    }
+
+    .lead {
+        max-width: 100%;
+        margin: auto;
+    }
+
+    .lead__title {
+       font-size: 40px;
+       line-height: 44px;
+       margin: auto;
+       max-width: calc(100% - 32px);
+    }
+
+    .lead__subtitle {
+        font-size: 16px;
+        line-height: 20px;
+        margin: auto;
+        max-width: calc(100% - 128px);
+    }
+
+    .intro {
+        max-width: calc(100% - 48px);
+        display: grid;
+       
+    }
+
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
+
+    .intro__list {
+        padding-top: 34px;
+    }
+
+    .photo-grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        max-width: calc(100% - 48px);
+    }
+
+    .places {
+        max-width: 100%;
+        margin: 0 auto;
+    }
+
+    .place {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 32px;
+    }  
+
+    .place__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+        padding-left: 24px;
+    }
+
+    .place__website {
+        padding-left: 24px;
+    }
+
+    .place__text {
+        padding-left: 24px;
+        padding-right: 24px;
+    }
+
+    .cover {
+        width: 100%;
+        max-height: 480px;
+        padding-top: 90px;
+    }
+
+    .cover__overlay {
+        max-width: 100%;
+        margin: 0 auto;
+        max-height: 480px;
+        
+    }
+
+    .cover__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
+
+    .cover__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+    }
+
+    .footer {
+        max-width: calc(100% - 48px);
+        padding-top: 88px;
+    }
+
+    .footer__links {
+        display: grid;
+        grid-template-rows: repeat(5, 1fr);
+        gap: 18px;
+        
+    }
+
+    .footer__link {
+        padding: 0;
+    }
+
+    .footer__copyright {
+        align-self: flex-end;
+        text-align: right;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .header {
+        max-width: calc(100% - 32px);
+        padding-top: 16px;
+    }
+
+    .header__logo {
+        width: 142px;
+        height: 42px;
+    }
+
+    .header__lang-link {
+        font-size: 18px;
+        line-height: 20px;
+    }
+
+    .lead {
+        max-width: 100%;
+        padding-top: 48px;
+    }
+
+    .lead__title {
+        font-size: 30px;
+        line-height: 34px;
+        margin: auto;
+        max-width: calc(100% - 32px);
+        
+    }
+
+    .lead__subtitle {
+        font-size: 16px;
+        line-height: 20px;
+        padding-top: 16px;
+    }
+
+    .lead__image {
+        width: 100%;
+        padding-top: 40px;
+    }
+    
+    .intro {
+        max-width: calc(100% - 32px);
+        padding-top: 64px;
+    }
+
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+    }
+
+    .photo-grid {
+        display: grid;
+        grid-template-columns: 1fr;
+        max-width: calc(100% - 32px);
+    }
+
+    .places {
+        width: 100%;
+    }
+
+    .place {
+        display: grid;
+        grid-template-columns: 1fr;
+        padding-top: 64px;
+        gap: 32px;
+    }
+
+    .place__title {
+        font-size: 32px;
+        line-height: 35px;
+        padding-left: 16px;
+    }
+
+    .place__website {
+        padding-left: 16px;
+    }
+
+    .place__text {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .cover {
+        width: 100%;
+        padding-top: 66px;
+    }
+
+    .cover__overlay {
+        max-width: 100%;
+        margin: 0 auto;
+        max-height: 200px;
+    }
+
+    .cover__title {
+        font-size: 32px;
+        line-height: 35px;
+        margin: 0 auto;
+    }
+
+    .cover__subtitle {
+        font-size: 14px;
+        line-height: 16px;
+        padding-top: 16px;
+        margin: 0 auto;
+    }
+
+    .footer {
+        display: flex;
+        flex-direction: column;
+        padding-top: 64px;
+    }
+
+    .footer__links {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 32px;
+    }
+
+    .footer__link {
+        padding: 0;
+    }
+
+    .footer__copyright {
+        padding-top: 48px;
+    }
 }
