--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,9 +8,9 @@
     padding-top: 28px;
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1281px) {
     .header {
-        max-width: calc(100% - 96px);
+        max-width: 1184px;
     }
 }
 
