--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,11 +4,11 @@
     margin: auto;
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1281px) {
     
 
     .lead {
-        max-width: calc(100% - 296px);
+        max-width: 984px;
     }
 }
 
