--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,7 @@
 .cover__overlay {
     max-width: calc(100% - 96px);
     height: 740px;
-    background-image: linear-gradient(rgba(42, 44, 47, 0.3), rgba(42, 44, 47, 0.3)), url(../../../sprint-3-images/cover-trains.jpg);
+    background-image: linear-gradient(rgba(42, 44, 47, 0.3), rgba(42, 44, 47, 0.3)), url(../../../images/cover-trains.jpg);
     display: flex;
     flex-direction: column;
     background-size: cover;
@@ -15,7 +15,7 @@
 }
 
 .cover__overlay:hover {
-    background-image: linear-gradient(rgba(42, 44, 47, 0.8), rgba(42, 44, 47, 0.8)), url(../../../sprint-3-images/cover-trains.jpg);
+    background-image: linear-gradient(rgba(42, 44, 47, 0.8), rgba(42, 44, 47, 0.8)), url(../../../images/cover-trains.jpg);
 }
 
 @media screen and (min-width: 1280px) {
