--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,10 +5,10 @@
     padding-top: 92px;
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1281px) {
 
     .cover {
-        max-width: calc(100% - 96px);
+        max-width: 1184px;
         
     }
 }
