--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,7 +4,15 @@
     margin: 0 auto;    
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1281px) {
+
+    .intro {
+        max-width: 984px;
+        max-height: 720px;
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
 
     .intro {
         max-width: calc(100% - 148px);
