--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,6 +8,13 @@
     padding-top: 92px;
 }
 
+@media screen and (min-width: 1280px) {
+
+    .photo-grid {
+      max-width: 1184px;
+    }
+}
+
 @media screen and (min-width: 769px) and (max-width: 1024px) {
 
     .photo-grid {
