--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,6 +5,15 @@
     padding-top: 92px;
 }
 
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+
+    .place {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+    }
+}
+
 @media screen and (min-width: 769px) and (max-width: 1024px) {
 
     .place {
