--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -3,6 +3,13 @@
     margin: 0 auto;
 }
 
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+
+    .places {
+        max-width: calc(100% - 296px);
+    }
+}
+
 @media screen and (min-width: 769px) and (max-width: 1024px) {
 
     .places {
