--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -8,7 +8,7 @@
 @media screen and (min-width: 1025px) and (max-width: 1280px) {
 
     .place {
-        display: grid;
+        
         grid-template-columns: repeat(2, 1fr);
         gap: 40px;
     }
@@ -17,7 +17,7 @@
 @media screen and (min-width: 769px) and (max-width: 1024px) {
 
     .place {
-        display: grid;
+        
         grid-template-columns: repeat(2, 1fr);
         gap: 32px;
     }
@@ -26,16 +26,16 @@
 @media screen and (min-width: 426px) and (max-width: 768px) {
 
     .place {
-        display: grid;
-        grid-template-columns: 1fr;
-        gap: 32px;
+        
+        grid-template-columns: repeat(2, 1fr);
+        gap: 28px;
     }
 }
 
 @media screen and (max-width: 425px) {
 
     .place {
-        display: grid;
+        
         grid-template-columns: 1fr;
         padding-top: 64px;
         gap: 32px;
