--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,7 +1,7 @@
 .cover__overlay {
     max-width: calc(100% - 96px);
-    height: 740px;
-    background-image: linear-gradient(rgba(42, 44, 47, 0.3), rgba(42, 44, 47, 0.3)), url(../../../images/cover-trains.jpg);
+    min-height: 740px;
+    background-image: url(../../../images/cover-trains.jpg);
     display: flex;
     flex-direction: column;
     background-size: cover;
@@ -10,19 +10,46 @@
     justify-content: center;
     text-decoration: none;
     margin: 0 auto;
-    transition: background-image;
-
+    position: relative;
+    
 }
 
-.cover__overlay:hover {
-    background-image: linear-gradient(rgba(42, 44, 47, 0.8), rgba(42, 44, 47, 0.8)), url(../../../images/cover-trains.jpg);
+.cover__overlay::before {
+    content: '';
+    position: absolute;
+    background-color: #2A2C2F;
+    opacity: 0.3;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transition-property: all;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
 }
 
-@media screen and (min-width: 1280px) {
+.cover__overlay:hover::before {
+    background-color: #2A2C2F;
+    opacity: 0.8;
+    
+    
+}
+
+
+
+@media screen and (min-width: 1281px) {
 
     .cover__overlay {
         max-width: 100%;
         
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+
+    .cover__overlay {
+        max-width: 100%;
     }
 }
 
@@ -31,6 +58,7 @@
     .cover__overlay {
         max-width: 100%;
         margin: 0 auto;
+        min-height: 640px;
     }
 }
 
@@ -39,7 +67,7 @@
     .cover__overlay {
         max-width: 100%;
         margin: 0 auto;
-        max-height: 480px;
+        min-height: 480px;
     }
 }
 
@@ -48,6 +76,6 @@
     .cover__overlay {
         max-width: 100%;
         margin: 0 auto;
-        max-height: 200px;
+        min-height: 200px;
     }
 }
