--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,13 +6,15 @@
     line-height: 22px;
     text-align: center;
     color: white;
+    margin: 0 auto;
+    padding-top: 32px;
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
 
     .cover__subtitle {
-        font-size: 14px;
-        line-height: 16px;
+        font-size: 18px;
+        line-height: 122%;
     }
 }
 
