--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,13 +6,14 @@
     line-height: 76px;
     text-align: center;
     color: white;
+    margin: 0 auto;
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
 
     .cover__title {
-        font-size: 32px;
-        line-height: 35px;
+        font-size: 10vw;
+        line-height: 106%;
     }
 }
 
