--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
 .cover {
     max-width: 100%;
     margin: 0 auto;
-    max-height: 740px;
+    
     padding-top: 92px;
 }
 
@@ -9,6 +9,14 @@
 
     .cover {
         max-width: 1184px;
+        
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+
+    .cover {
+        max-width: calc(100% - 96px);
         
     }
 }
@@ -24,7 +32,7 @@
 
     .cover {
         width: 100%;
-        max-height: 480px;
+        
         padding-top: 90px;
     }
 }
