--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,11 +1,18 @@
 .header__lang-link {
     color: white;
     text-decoration: none;
+    margin-right: 18px;
+    line-height: 28px;
 }
 
-.header__lang-link:first-of-type {
-    text-decoration: underline;
-    padding-right: 18px;
+
+
+.header__lang-link:last-of-type {
+    margin-right: 0;
+}
+
+.header__lang-link:hover {
+    opacity: 0.8;
 }
 
 @media screen and (max-width: 425px) {
