--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -9,15 +9,15 @@
 @media screen and (min-width: 426px) and (max-width: 768px) {
 
     .intro__title {
-        font-size: 32px;
-        line-height: 35px;
+        font-size: 7vw;
+        line-height: 107%;
     }
 }
 
 @media screen and (max-width: 425px) {
 
     .intro__title {
-        font-size: 32px;
+        font-size: 11.5vw;
         line-height: 35px;
     }
 }
