--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,4 +6,19 @@
     letter-spacing: 1.5px;
     margin: 0;
     padding-top: 8px;
+    text-transform: uppercase;
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+    .lead__caption {
+        padding-left: 24px;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .lead__caption {
+        padding-left: 16px;
+        font-size: 3vw;
+        padding-top: 0;
+    }
 }
