--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,8 +12,8 @@
 @media screen and (min-width: 426px) and (max-width: 768px) {
 
     .lead__subtitle {
-        font-size: 16px;
-        line-height: 20px;
+        font-size: 4vw;
+        line-height: 120%;
         margin: auto;
         max-width: calc(100% - 128px);
     }
@@ -22,8 +22,8 @@
 @media screen and (max-width: 425px) {
 
     .lead__subtitle {
-        font-size: 16px;
-        line-height: 20px;
+        font-size: 5vw;
+        line-height: 125%;
         padding-top: 16px;
     }
 }
