--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,24 @@
 .place__paragraph {
     margin: 0;
+    padding-top: 26px;
+    font-size: 18px;
+    line-height: 26px;
 }
 
-.place__paragraph:nth-of-type(2) {
-    padding-top: 26px;
+.place__paragraph:nth-of-type(1) {
+    padding-top: 0;
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 163%;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 26.08px;
+    }
 }
