--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -14,15 +14,15 @@
 
     .places {
         max-width: calc(100% - 96px);
-        margin: 0 auto;
+        
     }
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
 
     .places {
-        max-width: 100%;
-        margin: 0 auto;
+        max-width: calc(100% - 48px);
+        
     }
 }
 
