--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -3,7 +3,25 @@
     font-style: normal;
     font-size: 16px;
     line-height: 26.08px;
-    max-width: 690px;
+    
     margin: 0;
     padding-top: 40px;
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+    .intro__text {
+        max-width: 690px;
+    }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1280px) {
+    .intro__text {
+        max-width: 690px;
+    }
+}
+
+@media screen and (min-width: 1281px) {
+    .intro__text {
+        max-width: 690px;
+    }
 }
