--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,13 +1,8 @@
 .place__website {
-    align-self: end;
+    align-self: flex-end;
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
 
-    .place__website {
-        padding-left: 24px;
-    }
-}
 
 @media screen and (max-width: 425px) {
 
