--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -11,7 +11,7 @@
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
     .place__paragraph {
-        font-size: 16px;
+        font-size: 2.1vw;
         line-height: 163%;
     }
 }
