--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -9,8 +9,8 @@
     padding-top: 33px;
 }
 
-@media screen and (min-width: 426px) and (max-width: 768px) {
 
+@media screen and (max-width: 425px) {
     .intro__list {
         padding-top: 34px;
     }
