--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,12 +3,13 @@
     font-style: normal;
     font-size: 14px;
     line-height: 16px;
+    margin: 0;
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
 
     .footer__copyright {
-        align-self: flex-end;
+        align-self: center;
         text-align: right;
     }
 }
