--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -4,6 +4,7 @@
     gap: 18px;
     list-style-type: none;
     padding-left: 0;
+    margin: 0;
 }
 
 @media screen and (min-width: 426px) and (max-width: 768px) {
