--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,7 +1,7 @@
 .intro__text {
     font-weight: 400;
     font-style: normal;
-    font-size: 16px;
+    font-size: 5vw;
     line-height: 26.08px;
     
     margin: 0;
