--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,18 @@
 .intro__text {
     font-weight: 400;
     font-style: normal;
-    font-size: 5vw;
+    font-size: 16px;
     line-height: 26.08px;
     
     margin: 0;
     padding-top: 40px;
+}
+
+@media screen and (min-width: 426px) and (max-width: 768px) {
+    .intro__text {
+        font-size: 2.1vw;
+        line-height: 163%;
+    }
 }
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
