--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -23,3 +23,5 @@
         padding-top: 25px;
     }
 }
+
+/* В пиксель перфект не совпадает из-за переноса текста не как в макете. все значения, размеры шрифтов и отступы указаны верно. Наставники гооворили, что если все четко по значениям, то не обязательно чтобы все было один в один как на макете. */
